# MEMO

./: .gitmodules  AGENTS.md  README.md  pyproject.toml  requirements.txt
doc/: HARNESS_PROJECT_MANAGEMENT.md  README.md  agent_experiment_design.md  memo modify plan.md  memo_reproduction_and_innovation_plan.md
