[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memo"
version = "0.1.0"
description = "Memory-Augmented Model Context Optimization for robust multi-turn multi-agent LLM games."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "textarena @ file:./TextArena",
    "wandb",
    "vllm",
    "ray>=2.43.0",
    "torch",
    "transformers",
    "peft",
    "trueskill",
    "pynvml",
    "dm-tree",
    "pandas",
]

[tool.setuptools.packages.find]
include = ["mpr*", "memo*", "envs*", "evolution*"]
exclude = ["wandb*", "outputs*", "data*", "logs*", "tests*"]

[project.urls]
Homepage = "https://github.com/openverse-ai/MEMO"